--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,38 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@font-face {
+  font-family: "DungGeunMo";
+  src: url("./fonts/DungGeunMo.woff2") format("woff2"),
+    url("./fonts/DungGeunMo.woff") format("woff"),
+    url("./fonts/DungGeunMo.ttf") format("ttf");
+  font-wieght: normal;
+  font-style: normal;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@keyframes blink {
+  0%,
+  100% {
+    opacity: 1;
   }
+  50% {
+    opacity: 0;
+  }
+}
+
+input {
+  caret-color: transparent;
+}
+
+input::after {
+  content: "";
+  position: absolute;
+  width: 8px;
+  height: 1.2em;
+  background-color: white;
+  animation: blink 1s infinite;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+  font-family: "DungGeunMo", sans-serif;
 }
