[Fix] 페이지 구조 변경, Swal용 아이콘 추가, 회원가입 페이지 추가

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,3 +10,17 @@
   font-wieght: normal;
   font-style: normal;
 }
+
+.swal2-icon-white {
+  filter: brightness(0) invert(1); /* SVG를 흰색으로 변경 */
+}
+
+.swal2-confirm {
+  border: 2px solid white;
+  border-radius: 0;
+}
+
+.swal2-confirm:hover {
+  background-color: white !important;
+  color: #1e3a8a !important;
+}
